--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -23,8 +23,8 @@
 					<i class="fa-solid fa-globe"></i>
 				</label>
 				<input type="text" name="guess" placeholder="Guess here" id="username" required>
-				<!-- <div class="msg">{{ msg }}</div> -->
-				<div class="msg">
+				<div class="msg">{{ msg }}</div>
+				<!--<div class="msg">
 					<ul>
 						{% if not guesses %}
 							{{ msg }}
@@ -36,6 +36,7 @@
 					</ul>
 
 				</div>
+			-->
 
 				<input type="submit" value="Enter">
 			</form>
