--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -14,7 +14,16 @@
 				<a href="{{ url_for('game') }}" class="active"><i class="fa fa-gamepad"></i> Game</a>
 				<a href="{{ url_for('logout') }}" class="active"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
 			</div>
-            <h1>Nothing to See</h1>
+			<div class="profile-info">
+				<div class="profile-pic">
+					<img src="{{ url_for('static', filename='images/default-profile.png') }}" alt="Profile Picture">
+				</div>
+				<div class="details">
+					<p><strong>Username:</strong> {{ user.username }}</p>
+					<p><strong>Email:</strong> {{ user.email }}</p>
+					<p><strong>Joined:</strong> {{ user.joined_date }}</p>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
