--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 		<meta charset="utf-8">
 		<title>Profile</title>
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -24,6 +25,25 @@
 					<p><strong>Joined:</strong> {{ user.joined_date }}</p>
 				</div>
 			</div>
+			<div class="edit-profile">
+				<h2>Edit Profile</h2>
+				<form action="{{ url_for('edit_profile') }}" method="post" enctype="multipart/form-data">
+					<label for="username">
+						<i class="fas fa-user"></i>
+					</label>
+					<input type="text" name="username" placeholder="New Username" id="username">
+					<label for="email">
+						<i class="fas fa-envelope"></i>
+					</label>
+					<input type="email" name="email" placeholder="New Email" id="email">
+					<label for="profile-pic">
+						<i class="fas fa-camera"></i>
+					</label>
+					<input type="file" name="profile-pic" id="profile-pic">
+					<input type="submit" value="Update Profile">
+				</form>
+			</div>
 		</div>
+
 	</body>
 </html>
