minor updates to correct game output

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -25,15 +25,14 @@
 				<input type="text" name="guess" placeholder="Guess here" id="username" required>
 				<div class="msg">{{ msg }}</div>
 				<!--<div class="msg">
-					<ul>
 						{% if not guesses %}
 							{{ msg }}
 						{% else %} 
 							{%for i in range(0, len)%} 
-							<li>{{guesses[i]}}</li> 
+								{{guesses[i]}} <br>
 							{%endfor%} 
 						{% endif %}
-					</ul>
+
 
 				</div>
 			-->
