updated profile back-end route

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -11,7 +11,7 @@
 		<div class="login">
 			<h1>GuessTheVerb</h1>
 			<div>
-				<a href="{{ url_for('register') }}" class="active"><i class="fa fa-user" ></i>Profile</a>
+				<a href="{{ url_for('profile') }}" class="active"><i class="fa fa-user" ></i>Profile</a>
 				<br>
 				<a href="{{ url_for('login') }}" class="active"><i class="fa-solid fa-right-from-bracket" ></i>Logout</a>
 				<br>
