--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -22,7 +22,7 @@
 				<div class="details">
 					<p><strong>Username:</strong> {{ user }}</p>
 					<p><strong>Email:</strong> {{ email }}</p>
-					<!-- <p><strong>Joined:</strong> {{ user.joined_date }}</p> -->
+					<p><strong>Joined:</strong> {{ joined }}</p>
 				</div>
 			</div>
 			<div class="edit-profile">
