Updated game logic to deduct 10 points for wrong guesses and added ranking display on profile

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -30,21 +30,39 @@
                 <i class="fa-solid fa-globe"></i>
             </label>
             <input type="text" name="guess" placeholder="Guess here" id="guess" required>
-            <div class="msg">
-                {% if msg == 'Welcome!' or msg == "Start Over!" or msg == 'You Won! Start Over' %}
-                    {{ msg }}
-                {% else %}
-                    {% for i in range(0, len) %} 
-                        Your guess was: {{ guesses[i] }} and similarity score: {{ scores[i] }}  <br>
-                    {% endfor %} 
-                {% endif %}
-            </div>
             <input type="submit" value="Enter">
         </form>
+        
+        <div class="msg">
+            {% if msg %}
+                {{ msg }}
+            {% endif %}
+        </div>
 
         <form action="{{ url_for('game') }}" method="post">
             <input type="submit" value="Give Up" name="giveup">
         </form>
+
+        <div class="score">
+            <h2>Your Score: {{ user_score }}</h2>
+        </div>
+
+        <div class="ranking">
+            <h2>Top Players</h2>
+            <ul id="ranking-list"></ul>
+        </div>
     </div>
+    <script>
+        fetch("{{ url_for('rankings') }}")
+            .then(response => response.json())
+            .then(data => {
+                const rankingList = document.getElementById("ranking-list");
+                data.forEach(user => {
+                    const listItem = document.createElement("li");
+                    listItem.textContent = `Rank ${user.rank}: ${user.username} - ${user.score} points`;
+                    rankingList.appendChild(listItem);
+                });
+            });
+    </script>
 </body>
 </html>
